--- a/bazel-android/Dockerfile
+++ b/bazel-android/Dockerfile
@@ -1,11 +1,27 @@
-FROM l.gcr.io/google/bazel:3.1.0
+FROM ubuntu:20.04
+
 RUN apt update
-RUN apt -y install python3-numpy python3-pip python3-future
-RUN apt -y install python-numpy python-pip python-future
+
+RUN apt -y install curl wget gnupg
+
+COPY bazel.list /etc/apt/sources.list.d/bazel.list
+RUN wget https://bazel.build/bazel-release.pub.gpg 
+RUN apt-key add bazel-release.pub.gpg
+RUN apt update
+
+RUN apt -y install openjdk-8-jdk
+RUN apt -y install python3-numpy python3-pip python3-future python-is-python3
 RUN apt -y install android-sdk
+RUN apt -y install build-essential cmake git
+RUN apt -y upgrade
+
+RUN apt -y install bazel=3.1.0
+
 RUN wget https://dl.google.com/android/repository/commandlinetools-linux-6609375_latest.zip -P /var/lib
 RUN unzip /var/lib/commandlinetools-linux-6609375_latest.zip -d /var/lib
 RUN yes | /var/lib/tools/bin/sdkmanager --sdk_root=/usr/lib/android-sdk --licenses
 RUN /var/lib/tools/bin/sdkmanager --sdk_root=/usr/lib/android-sdk --update
 RUN /var/lib/tools/bin/sdkmanager --sdk_root=/usr/lib/android-sdk "ndk;20.1.5948944"
 RUN /var/lib/tools/bin/sdkmanager --sdk_root=/usr/lib/android-sdk "platforms;android-23"
+
+RUN mkdir /tmp/build_output
