--- a/vs2019_buildtools_cuda_bazel/Dockerfile
+++ b/vs2019_buildtools_cuda_bazel/Dockerfile
@@ -1,7 +1,7 @@
 # escape=`
 
 # Use the latest vs2019 buildtools with cuda with openvino
-FROM emgu/vs2019_buildtools_cuda_openvino:latest
+FROM emgu/vs2019_buildtools_cuda_openvino:openvino_2021.2.185
 
 # Install Bazel
-RUN choco install -y bazel --version 3.3.1
+RUN choco install -y bazel --version 3.7.0
