--- a/vs2019_buildtools_cuda_openvino/Dockerfile
+++ b/vs2019_buildtools_cuda_openvino/Dockerfile
@@ -11,7 +11,7 @@ ADD https://registrationcenter-download.intel.com/akdlm/irc_nas/17505/w_openvino
 # Install OpenVino
 #RUN powershell.exe -Command Start-Process 'w_openvino_toolkit_p_2021.2.185.exe' -ArgumentList '--s --a install --eula=accept --output=openvino_install_out.log --components=OPENVINO_COMMON,INFERENCE_ENGINE,INFERENCE_ENGINE_SDK,INFERENCE_ENGINE_SAMPLES,OMZ_TOOLS,POT,INFERENCE_ENGINE_CPU,INFERENCE_ENGINE_GPU,MODEL_OPTIMIZER,OMZ_DEV,OPENCV_PYTHON,OPENCV_RUNTIME,OPENCV,DOCS,SETUPVARS,VC_REDIST_2017_X64,icl_redist' -Wait
 RUN powershell.exe -Command Start-Process 'w_openvino_toolkit_p_2021.2.185.exe' -ArgumentList '--s --a install --eula=accept --output=openvino_install_out.log' -Wait
-RUN del 'w_openvino_toolkit_p_2021.2.185.exe'
+RUN del w_openvino_toolkit_p_2021.2.185.exe
 
 # Copy MediaFeaturePack
 # Need to download openvino installer first
