Build bazel-raspbian image using bazel 4.0

--- a/bazel-raspbian/Dockerfile
+++ b/bazel-raspbian/Dockerfile
@@ -14,8 +14,8 @@ RUN wget https://download.visualstudio.microsoft.com/download/pr/e8912d3b-483b-4
 
 #Build bazel from source 
 RUN mkdir -p bazel
-COPY bazel-3.7.1-arm.patch /bazel/bazel-3.7.1-arm.patch
-RUN cd bazel;wget https://github.com/koenvervloesem/bazel-on-arm/raw/master/patches/bazel-3.7.1-arm.patch;wget https://github.com/bazelbuild/bazel/releases/download/3.7.1/bazel-3.7.1-dist.zip;unzip bazel-3.7.1-dist.zip;patch -p1 < bazel-3.7.1-arm.patch;env EXTRA_BAZEL_ARGS="--host_javabase=@local_jdk//:jdk" bash ./compile.sh;cd ..;cp /bazel/output/bazel /usr/local/sbin/
+#Download from https://github.com/koenvervloesem/bazel-on-arm/tree/master/patches
+RUN cd bazel;wget https://github.com/koenvervloesem/bazel-on-arm/raw/master/patches/bazel-4.0.0-arm.patch;wget https://github.com/bazelbuild/bazel/releases/download/4.0.0/bazel-4.0.0-dist.zip;unzip bazel-4.0.0-dist.zip;patch -p1 < bazel-4.0.0-arm.patch;env EXTRA_BAZEL_ARGS="--host_javabase=@local_jdk//:jdk" bash ./compile.sh;cd ..;cp /bazel/output/bazel /usr/local/sbin/
 
 RUN rm -rf bazel
 
